egonlang-core/res/examples/invalid/if_else_expression_unit_expr_as_cond_then.eg
if void void

// out: SyntaxError: unexpected "void"; expected: ["\"(\""]